# JenTrace

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: ApertureStopPosition.ipynb  quickStart.ipynb  raySourceTrace.ipynb
examples/.ipynb_checkpoints/: ApertureStopPosition-checkpoint.ipynb  GettingStarted-checkpoint.ipynb  Quick start-checkpoint.ipynb  helloWorld-checkpoint.ipynb  quickStart-checkpoint.ipynb  singleRayTrace-checkpoint.ipynb
src/JenTrace/: abr_fnc.py  catalog.py  mrt_fnc.py  opt_dsg.py  opt_sys.py  plt_fnc.py  ray_src.py  ray_trc.py  spt_dgm.py
src/JenTrace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
