[metadata]
name = JenTrace-dlvp
version = 1.0.1
author = David L. Vasquez
author_email = davidlvasquez@gmail.com
description = Ray trace software for optical design
long_description = file: README.md
url = https://github.com/dlvasquezp/JenTrace
classifiers =
    Programming Language :: Python :: 3
    License :: GNU License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src